# FireWorldBench

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE_POLICY.md  PROJECT_CHARTER.md  README.md  REPRODUCIBILITY.md  ROADMAP.md  environment.yml  fds_pilot.v2.json  generate_fds.py  generate_fds_pilot_inputs.py  prediction.v2.schema.json  pyproject.toml  release_packages.v2.json  release_report.py  score.py  scoring.py
artifacts/: README.md
configs/: README.md  ablation_P5-ABLATION-001.json  anon_P7-ANON-001.json  baseline_num_P4-BASELINE-NUM.json  benchmark_integration_P5-BENCHMARK-INTEGRATE-001.json  calibration_P5-FINAL-CALIBRATION-001.json  calibration_P5-MAIN-001.json  claims_P5-CLAIMS-FREEZE-001.json  data_sources.toml  deepseek_formal_structure_pilot.json  deepseek_planning_pilot_P4-PILOT-RUN.json  deepseek_research_P5-RESEARCH-RUN-001.json  error_analysis_P5-ERROR-001.json  evaluation.toml  evaluation.v2.json  evaluation_P2-EVAL-001.json  expert_review_P3-EXPERT-001.json  fdgen_P5-FDGEN-001.json  fds_prototype.v2.json  formal_run_P5-MAIN-001.json  gold_status_P5-PLANNING.json  harness_P4-HARNESS-001.json  leak_policy_P2-LEAK-001.json  llm_baseline_P4-BASELINE-LLM.json  main_run_P5-MAIN-001.json  main_run_P5-MAIN-RUN-readiness.json  main_run_P5-PLANNING-001.json  model_matrix_P5-MAIN-001.json  model_matrix_P5-PLANNING.json  model_onboarding_P3-MODEL-ONBOARDING.json  mvp_rc1_P3-MVP-RC1-001.json  paper_audit_P6-AUDIT-001.json  paper_export_P6-EXPORT-001.json  paper_figures_P6-PAPER-FIGURES-001.json  paper_tables_P6-PAPER-TABLES-001.json  paper_text_P6-PAPER-TEXT-001.json  pilot_freeze_P4-PILOT-FREEZE-001.json  pilot_run_P4-PILOT-RUN.json  pipeline_P3-PIPELINE-001.json  planning_mode_P3-PLANNING-MODE-ENABLEMENT.json  (+26 more)
data/: README.md
docs/: ARCHITECTURE_FREEZE.md  CONFLICT_AUDIT_2026-07-17.md  DATASET_STATUS_2026-07-20.md  DATA_CARD.md  DETECTIUM_QUARANTINE_2026-07-20.md  EVALUATION_CARD.md  EXTERNAL_OOD_PRODUCTION_PLAN.md  FINALIZATION_ACCEPTANCE.md  FINAL_REPAIR_AND_ACCEPTANCE_PLAN_V3.md  FINE_GRAINED_TASK_METRIC_REDESIGN.md  IDEAL_DATASET_CONFIGURATION.md  MODEL_CARD.md  MODEL_INPUT_ADAPTERS.md  PILOT_20_EVENTS.md  PREDICTION_OUTPUT_CONTRACT.md  SOURCE_ROLE_MATRIX.md  TASK_PROTOCOL.md  V2_FINALIZATION_HANDOFF_PROMPT.md
migration/: README_SERVER_MIGRATION.md  SERVER_HANDOFF_PROMPT.md  transfer_manifest.json
prompts/: README.v2.md
schemas/: README.md  qa.schema.json  (+5 more)
(+439 files in other folders)
