[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "fireworldbench"
version = "2.0.0.dev0"
description = "A simulation-grounded benchmark for multimodal fire world understanding"
readme = "README.md"
requires-python = ">=3.11"
authors = []
dependencies = [
  "fdsreader==1.11.7",
  "jsonschema>=4.22",
  "numpy>=2.4,<3",
  "pillow>=12,<13",
  "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
fwb = "fireworldbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fireworld", "fireworldbench"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fdsreader", "fdsreader.*", "jsonschema", "jsonschema.*", "PIL", "PIL.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["fireworldbench"]
